[package]
name = "traderjoe-rs-sdk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv_codegen = "0.15.0"

ethers = { version = "0.17.0", features = ["abigen"]}
ethers-contract = "0.17.0"
ethers-providers = "0.17.0"

hex = "0.4.3"
hex-literal = "0.3.4"

lazy_static = "1.4.0"

tokio = { version = "1.20.1", features = ["full"] }